--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ OPENAI_API_KEY=
 # Git identity (default: read from local git config)
 # GIT_USER_NAME=
 # GIT_USER_EMAIL=
+
+# Language toolchain versions
+# GO_VERSION=1.24.2
+# RUST_VERSION=stable
