--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,7 +2,8 @@
 host_key_checking = False
 timeout = 30
 gathering = smart
+forks = 10
 
 [ssh_connection]
-ssh_args = -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ForwardAgent=yes
+ssh_args = -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=30m -o ControlPath=/tmp/ansible-%%h-%%r
 pipelining = True
