handle separate ssh key

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ ANTHROPIC_API_KEY=
 # Get one at: https://platform.openai.com/api-keys
 OPENAI_API_KEY=
 
+# GitHub personal access token (recommended — for git push from server)
+# Get one at: https://github.com/settings/tokens → "admin:public_key" scope
+GITHUB_TOKEN=
+
 # ── Optional overrides (auto-detected if not set) ──────────────
 
 # Path to SSH public key (default: ~/.ssh/id_ed25519.pub or ~/.ssh/id_rsa.pub)
